--- a/proyecto/src/templates/dashboard/manager/edit_perfil.html
+++ b/proyecto/src/templates/dashboard/manager/edit_perfil.html
@@ -7,21 +7,35 @@
     <div class="container w-50 pb-5">
         <div class="card">
             <div class="card-header text-sm-center">
-                <h3 class="card-title">Editar Perfil</h3>
+                <h3 class="card-title"></h3>
             </div>
-            <div class="card-body text-center">
-                {{ form | crispy }}
+            <div class="card-body">
+                <h4 class="card-title text-center">Editar Perfil</h4>
+                <form action="" method="POST" class="row g-3">
+                    {% csrf_token %}
+                    {% if msg %}
+                    <div class="alert alert-danger" role="alert">
+                        <h5>{{ msg }}</h5>
+                    </div>
+                    {% endif %}
+                    <div class="card">
+                        <div class="card-body">
+                            {{ form | crispy }}
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between btn-group" role="group">
+                        <a name="" id="" class="btn btn-info" href=" {% url 'mod_p_perfil' user.empleado.id_empleado %} " role="button">Modificar turno</a> 
+                        <button  class="btn btn-success" type="submit">Guardar</button>
+                        
+                        <a type="button" href=" {% url 'perfil_admin' %} " class="btn btn-danger">Cancelar</a>
+                    </div>
+                  
+                </form>
             </div>
-            <div class="d-flex justify-content-between btn-group" role="group">
-                <a name="" id="" class="btn btn-info" href=" {% url 'modificar_turno' form.id_usuario.value %} " role="button">Modificar turno</a> 
-                <button  class="btn btn-success" type="submit">Guardar</button>
-                
-                <a type="button" href=" {% url 'perfil_admin' %} " class="btn btn-danger">Cancelar</a>
-            </div>
-
-
         </div>
     </div>
 </section>
 
 {% endblock admin-contenido %}
+
+
