--- a/proyecto/src/templates/dashboard/manager/base.html
+++ b/proyecto/src/templates/dashboard/manager/base.html
@@ -36,6 +36,8 @@
                     <a class="btn btn-light" type="button" href="{% url 'listar_cliente' %} "> Clientes</a>
                     <a class="btn btn-light" type="button" href="#">Menu</a>
                     <a class="btn btn-light" type="button" href="#">Inventario</a>
+                    <a class="btn btn-light" type="button" href="#">Proveedores</a>
+
                   </div>
             </ul>
             <div class="col-md-3 text-end">
