--- a/proyecto/src/templates/dashboard/manager/base.html
+++ b/proyecto/src/templates/dashboard/manager/base.html
@@ -32,7 +32,7 @@
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <div class="btn-group">
                     <a class="btn btn-light" type="button" href=" {% url 'empleados' %} ">Empleados </a>
-                    <a class="btn btn-light" type="button" href=" {% url 'mesas' %} ">Mesas </a>
+                    <a class="btn btn-light" type="button" href=" {% url 'admin_mesas' %} ">Mesas </a>
                     <a class="btn btn-light" type="button" href="{% url 'listar_cliente' %} "> Clientes</a>
                     <a class="btn btn-light" type="button" href="#">Menu</a>
                     <a class="btn btn-light" type="button" href="#">Inventario</a>
