--- a/proyecto/src/templates/dashboard/manager/mesa/index.html
+++ b/proyecto/src/templates/dashboard/manager/mesa/index.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="card">
             <div class="card-header">
-                <a name="" id="" class="btn btn-success" href="{% url 'crear' %}" role="button">Agregar Mesa</a>
+                <a name="" id="" class="btn btn-success" href="{% url 'crear_mesas' %}" role="button">Agregar Mesa</a>
             </div>
             <div class="card-body">
         
@@ -31,7 +31,7 @@
                                 <td>{{ e.7 }}</td> 
                                 <td>{{ e.8 }}</td>  -->
                                 <td  class="d-flex justify-content-between btn-group" role="group"> 
-                                    <a name="" id="" class="btn btn-info" href="#" role="button">Modificar</a> 
+                                    <a name="" id="" class="btn btn-info" href=" {% url 'modificar_mesas' m.0 %} " role="button">Modificar</a> 
                                     <a name="" id="" class="btn btn-danger" href=" {% url 'eliminar_mesa' m.0 %} " role="button">Eliminar</a></td>
                                 </tr>
                         {% endfor %} 
