--- a/proyecto/src/templates/dashboard/manager/base.html
+++ b/proyecto/src/templates/dashboard/manager/base.html
@@ -34,7 +34,7 @@
                     <a class="btn btn-light" type="button" href=" {% url 'empleados' %} ">Empleados </a>
                     <a class="btn btn-light" type="button" href=" {% url 'admin_mesas' %} ">Mesas </a>
                     <a class="btn btn-light" type="button" href="{% url 'listar_cliente' %} "> Clientes</a>
-                    <a class="btn btn-light" type="button" href="#">Menu</a>
+                    <a class="btn btn-light" type="button" href="{% url 'administrar_menu' %} ">Menu</a>
                     <a class="btn btn-light" type="button" href="#">Inventario</a>
                     <a class="btn btn-light" type="button" href="#">Proveedores</a>
 
