--- a/proyecto/src/templates/dashboard/manager/menu/index.html
+++ b/proyecto/src/templates/dashboard/manager/menu/index.html
@@ -15,8 +15,8 @@
                         <thead>
                             <tr>
                                 <th scope="col">ID</th>
+                                <th scope="col">Tipo</th>
                                 <th scope="col">Nombre</th>
-                                <th scope="col">Descripcion</th>
                                 <th scope="col">Porcion</th>
                                 <th scope="col">Tiempo</th>
                                 <th scope="col">Detalle</th>
