--- a/proyecto/src/templates/dashboard/manager/mesa/crear.html
+++ b/proyecto/src/templates/dashboard/manager/mesa/crear.html
@@ -19,7 +19,7 @@
                         <div class="d-flex justify-content-between btn-group" role="group">
                             <button class=" btn  btn-warning" type="submit">Crear</button>
     
-                            <a type="button" href=" {% url 'mesas' %} " class="btn btn-danger">Cancelar</a>
+                            <a type="button" href=" {% url 'admin_mesas' %} " class="btn btn-danger">Cancelar</a>
                         </div>
                     </div>
                     <div class="card-footer text-muted">
