--- a/proyecto/src/templates/dashboard/manager/mesa/modificar.html
+++ b/proyecto/src/templates/dashboard/manager/mesa/modificar.html
@@ -10,7 +10,7 @@
                 <h3 class="card-title"></h3>
             </div>
             <div class="card-body">
-                <h4 class="card-title text-center">Datos del Cliente</h4>
+                <h4 class="card-title text-center">Datos de la mesa</h4>
                 <form action="" method="POST" class="row g-3">
                     {% csrf_token %}
                     {% if msg %}
