--- a/proyecto/src/templates/dashboard/manager/menu/mod_tipo_menu.html
+++ b/proyecto/src/templates/dashboard/manager/menu/mod_tipo_menu.html
@@ -19,7 +19,7 @@
                         <div class="d-flex justify-content-between btn-group" role="group">
                             <button class=" btn  btn-warning" type="submit">Guardar</button>
     
-                            <a type="button" href=" {% url 'administrar_menu' %} " class="btn btn-danger">Cancelar</a>
+                            <a type="button" href=" {% url 'tipos_menus' %} " class="btn btn-danger">Cancelar</a>
                         </div>
                     </div>
                     <div class="card-footer text-muted">
