--- a/proyecto/src/templates/dashboard/client/base.html
+++ b/proyecto/src/templates/dashboard/client/base.html
@@ -29,7 +29,7 @@
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  py-3 mb-4 border-bottom">
             <a class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                <span style="font-weight: normal !important; color: rgb(0, 0, 0);">Bienvenido {{ user.first_name | title  }} &#x2661
+                <span style="font-weight: normal !important; color: rgb(0, 0, 0);">Bienvenid@ {{ user.first_name | title  }} &#x2661
 
 
                     <use xlink:href="#bootstrap" />
@@ -38,8 +38,8 @@
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="{% url 'menu' %}" class="nav-link px-2 link-dark">Menu</a></li>
-                <li><a href="{% url 'reservas' %}" class="nav-link px-2 link-dark">Ver reservas</a></li>
-                <li><a href="{% url 'reservar' %}" class="nav-link px-2 link-dark">Reservar</a></li>
+                {% comment %} <li><a href="{% url 'reservas' %}" class="nav-link px-2 link-dark">Ver reservas</a></li> {% endcomment %}
+                {% comment %} <li><a href="{% url 'reservar' %}" class="nav-link px-2 link-dark">Reservar</a></li> {% endcomment %}
                 <li><a href="{% url 'reservas' %}" class="nav-link px-2 link-dark">Mis reservas</a></li>
 
             </ul>
