--- a/proyecto/src/templates/dashboard/mesas/index.html
+++ b/proyecto/src/templates/dashboard/mesas/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     
-    
+    <section>
+        <div class="container">
+            .<div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Ingrese su RUT</h4>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 </body>
